--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron": "^11.1.1"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "dateformat": "^4.4.1",
     "fs": "0.0.1-security",
