--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NODEJS",
+  "name": "UnFootball",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^11.1.1",
+    "electron-packager": "^15.2.0",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^8.2.1"
