--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,16 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node":true
-    },
-    "extends": [
-	"eslint:recommended",
-        "google"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "rules": {
-    }
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "google"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "rules": {}
 }
