--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
   "author": "Loic",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^11.1.1",
+    "electron": "^11.2.1",
     "electron-packager": "^15.2.0",
-    "eslint": "^7.17.0",
-    "eslint-config-google": "^0.14.0",
-    "mocha": "^8.2.1"
+    "eslint": "^7.18.0",
+    "eslint-config-google": "^0.14.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
-    "dateformat": "^4.4.1",
-    "electron-toaster": "^2.0.4",
+    "bootstrap": "^4.6.0",
+    "dateformat": "^4.5.0",
     "fs": "0.0.1-security",
     "jquery": "^3.5.1",
     "querystring": "^0.2.0",
