--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "UnFootball",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A lightweight football desktop app",
   "main": "main.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "check": "eslint js/** -o reports/eslint.txt",
     "fix": "eslint js/**  --fix"
   },
-  "keywords": [],
+  "keywords": ["Electron", "Sport", "Football", "Node", "Jquery", "HTML", "CSS"],
   "author": "LABEYE Loic",
   "license": "MIT",
   "devDependencies": {
